<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.matsubara</groupId>
    <artifactId>Roulette</artifactId>
    <version>2.0</version>
    <packaging>jar</packaging>

    <name>Roulette</name>

    <description>The classic casino game now in Minecraft, no need for texture packs.</description>
    <properties>
        <java.version>16</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.1-SNAPSHOT</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>io.github.bananapuncher714</pattern>
                            <shadedPattern>me.matsubara.roulette.util</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.cryptomorin</pattern>
                            <shadedPattern>me.matsubara.roulette.util</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.github.juliarn</pattern>
                            <shadedPattern>me.matsubara.roulette.util</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.tchristofferson</pattern>
                            <shadedPattern>me.matsubara.roulette.util</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.MF</exclude>
                                <exclude>META-INF/maven/**</exclude>
                                <exclude>com/cryptomorin/xseries/particles/**</exclude>
                                <exclude>com/cryptomorin/xseries/XBiome*</exclude>
                                <exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
                                <exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
                                <exclude>com/cryptomorin/xseries/XBlock*</exclude>
                                <exclude>com/cryptomorin/xseries/XEnchantment*</exclude>
                                <exclude>com/cryptomorin/xseries/XPotion*</exclude>
                                <exclude>com/cryptomorin/xseries/XItemStack*</exclude>
                                <exclude>com/cryptomorin/xseries/XEntity*</exclude>
                                <exclude>com/cryptomorin/xseries/XTag*</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>essentials-repo</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>viaversion-repo</id>
            <url>https://repo.viaversion.com</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- NBTEditor -->
        <dependency>
            <groupId>io.github.bananapuncher714</groupId>
            <artifactId>nbteditor</artifactId>
            <version>7.18.7</version>
        </dependency>
        <!-- ProtocolLib -->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.1.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- XSeries -->
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>9.6.0</version>
        </dependency>
        <!-- Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- Vault -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- EssentialsX -->
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.19.7</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.3</version>
            <scope>provided</scope>
        </dependency>
        <!-- ViaVersion -->
        <dependency>
            <groupId>com.viaversion</groupId>
            <artifactId>viaversion-api</artifactId>
            <version>4.6.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- ConfigUpdater -->
        <dependency>
            <groupId>com.tchristofferson</groupId>
            <artifactId>ConfigUpdater</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>
        <!-- commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.13.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.13.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- netty-all -->
        <!--suppress VulnerableLibrariesLocal -->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.68.Final</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>